// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkContentContainer should render correctly 1`] = `
<div
  className="bpk-content-container"
  dangerouslySetInnerHTML={null}
>
  <h1>
    Heading
  </h1>
  <p>
    My paragraph.
  </p>
  <ul>
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
    <li>
      Item 3
    </li>
  </ul>
</div>
`;

exports[`BpkContentContainer should render correctly with a "bareHtml" attribute  1`] = `
<div
  className="bpk-content-container bpk-content-container--bare-html"
  dangerouslySetInnerHTML={null}
>
  <h1>
    Heading
  </h1>
  <p>
    My paragraph.
  </p>
  <ul>
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
    <li>
      Item 3
    </li>
  </ul>
</div>
`;
